# learn-browsers-work

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
benchmark/compare_html_parser/: Cargo.toml
benchmark/compare_html_parser/benches/: tokenizer.rs  tree_builder.rs
benchmark/compare_html_parser/data/: supported-tags.html
components/css/: Cargo.toml
components/css/src/: lib.rs
components/css/src/cssom/: mod.rs  style_rule.rs  stylesheet.rs
components/css/src/parser/: at_rule.rs  component_value.rs  declaration.rs  mod.rs  qualified_rule.rs  sample.rs  selector.rs  structs.rs  style_rule.rs  stylesheet.rs  utility.rs
components/css/src/parser/component_value/: color.rs  mod.rs
components/css/src/parser/css_value/: mod.rs
components/css/src/structs/: at_rule.rs  atomic.rs  component_value.rs  declaration.rs  declaration_value.rs  mod.rs  selector.rs
components/css/src/tokenizer/: mod.rs  token.rs
components/css_defs/: Cargo.toml
components/css_defs/src/: context.rs  lib.rs  property.rs  value.rs
components/css_defs/src/properties/: border_color.rs  mod.rs
components/css_defs/src/values/: border_style.rs  border_width.rs  color.rs  direction.rs  display.rs  float.rs  font_weight.rs  length.rs  mod.rs  number.rs  overflow.rs  percentage.rs  position.rs  text_align.rs
components/dom/: Cargo.toml
components/dom/src/: char_data.rs  comment.rs  document.rs  element.rs  element_factory.rs  lib.rs  node.rs  text.rs  token_list.rs
components/dom/src/elements/: html_element.rs  mod.rs
components/fast_dom/: Cargo.toml
components/fast_dom/src/: document.rs  element.rs  lib.rs  node.rs  text.rs
components/fast_dom/src/tree/: children.rs  mod.rs
components/fast_html/: Cargo.toml
components/fast_html/benches/: named_char_ref.rs  parse_html.rs  tokenizer.rs  with_attributes.rs
components/fast_html/src/debugger/: mod.rs
components/fast_html/src/tokenizer/: byte_string.rs  entities.rs  mod.rs  state.rs  stream.rs  token.rs
components/fast_html/src/tree_builder/: element_types.rs  insert_mode.rs  list_of_active_formatting_elements.rs  mod.rs  stack_of_open_elements.rs
components/fast_html/tests/: doctype.rs  document.rs  list.rs  missing_end_tag.rs  nesting.rs  with_attributes.rs
components/html/: Cargo.toml
components/html/benches/: parse-html.rs  tokenizer.rs  with_attributes.rs
components/html/src/: lib.rs
components/html/src/debugger/: mod.rs
components/html/src/tokenizer/: mod.rs  state.rs  token.rs
components/html/src/tree_builder/: insert_mode.rs  list_of_active_formatting_elements.rs  mod.rs  stack_of_open_elements.rs
components/html/tests/: in-body.rs  list.rs  missing_end_tag.rs  nesting.rs
components/layout/: Cargo.toml
components/layout/src/: box_model.rs  layout_box.rs  layout_tree.rs  lib.rs
components/layout/src/primitive/: edge.rs  mod.rs
components/re_css/: Cargo.toml
components/re_css/src/: lib.rs
components/re_css/src/parser/: mod.rs  parse.rs  structure.rs
components/re_css/src/shorthand_property/: margin.rs  mod.rs  utils.rs
components/re_css/src/token/: at_keyword.rs  escape.rs  function.rs  hash.rs  ident.rs  mod.rs  number.rs  string.rs  unicode.rs  url.rs  utils.rs
components/re_css/src/value/: display.rs  length.rs  mod.rs  percentage.rs  property.rs
components/style/: Cargo.toml
components/style/src/: cascade.rs  compute.rs  context.rs  lib.rs  selector_matching.rs
dev-playground/: Cargo.toml
dev-playground/src/: main.rs
example/: acknowledged-mdn-tags.html  supported-tags.html
html5parser/: Cargo.toml
src/: main.rs
utilities/parser_combinator/: Cargo.toml
utilities/parser_combinator/src/: lib.rs
utilities/stream/src/: input_stream.rs
utilities/tree/: Cargo.toml
utilities/tree/src/: children_iterator.rs  lib.rs
