[package]
name    = "learn-browser-works"
version = "0.1.0"
authors = ["tomixy"]
edition = "2021"

[workspace]

members = [
  "components/html",
  "utilities/tree",
  "utilities/stream",
  "components/dom",
  "components/css",
  "utilities/parser_combinator",
]

[dependencies]
html              = { path = "./components/html" }
css               = { path = "./components/css" }
parser_combinator = { path = "./utilities/parser_combinator" }
