[package]
name    = "learn-browser-works"
version = "0.1.0"
authors = ["tomixy"]
edition = "2021"

[workspace]

members = [
  "components/html",
  "utilities/tree",
  "utilities/stream",
  "components/dom",
  "components/css",
  "utilities/parser_combinator",
  "components/fast_html",
  "components/fast_dom",
  "benchmark/compare_html_parser",
  "components/style",
  "components/css_defs",
]

exclude = ["benchmark/compare_html_parser"]

[dependencies]
html       = { path = "./components/html" }
css        = { path = "./components/css" }
fast_html  = { path = "./components/fast_html" }
env_logger = "0.10.1"
