[package]
name    = "compare_html_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion         = { version = "0.5.1", features = ["html_reports"] }
html5ever         = "0.26.0"
lol_html          = "1.2.0"
fast_html         = { path = "../../components/fast_html" }
html              = { path = "../../components/html" }
markup5ever_rcdom = "0.2.0"
tl                = "0.7.7"

[[bench]]
name    = "tree_builder"
path    = "benches/tree_builder.rs"
harness = false

[[bench]]
name    = "tokenizer"
path    = "benches/tokenizer.rs"
harness = false
