[package]
name    = "css"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

stream            = { path = "../../utilities/stream" }
parser_combinator = { path = "../../utilities/parser_combinator" }
nom               = "7.1.3"
