[package]
name    = "fast_html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree       = { path = "../../utilities/tree" }
fast_dom   = { path = "../fast_dom" }
ecow       = "0.2.0"
log        = "0.4.20"
serde_json = "1.0.111"

[dev-dependencies]
assert-json-diff = "2.0.2"
criterion        = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name    = "parse_html"
path    = "benches/parse_html.rs"
harness = false

[[bench]]
name    = "tokenizer"
path    = "benches/tokenizer.rs"
harness = false
