[package]
name    = "html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stream     = { path = "../../utilities/stream" }
tree       = { path = "../../utilities/tree" }
dom        = { path = "../dom" }
serde_json = "1.0.111"
ecow       = "0.2.0"
log        = "0.4.20"
env_logger = "0.10.1"

[dev-dependencies]
assert-json-diff = "2.0.2"
criterion        = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name    = "parse_html"
path    = "benches/parse_html.rs"
harness = false

[[bench]]
name    = "tokenizer"
path    = "benches/tokenizer.rs"
harness = false
